[package]
name = "sparoid-rs"
version = "0.1.0"
edition = "2018"
authors = ["Magnus Landerblom <mange@84codes.com>"]
description = "sparoid client"
repository = "https://github.com/84codes/sparoid-rs"
license = "MIT"

[dependencies]
aes = "0.7.5"
block-modes = "0.8.1"
dnsclient = "0.1.15"
clap = { version = "4.3.23", features = ["derive"] }
hex = "0.4.3"
hmac = "0.11.0"
rand = "0.8.4"
rust-ini = "0.17.0"
sha2 = "0.9.8"
shellexpand = "2.1.0"
tokio = { version = "1.43.1", features = ["net", "macros", "rt-multi-thread"] }

[lib]
name = "sparoid"
path = "src/lib.rs"

[[bin]]
name = "sparoid"
path = "src/bin/main.rs"
